# Image-Physics-Simulation

./: .gitignore  README.md  physgen_dataset.py  pydoc-markdown.yml  pyproject.toml  setup.py
docs/: img_phy_sim.html  index.html  search.js
docs/img_phy_sim/: img.html  math.html  ray_tracing.html
example/: physgen.ipynb  physgen_performance.ipynb  ray_tracing_saver.py
img_phy_sim/: __init__.py  img.py  math.py  ray_tracing.py
