[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "img-phy-sim"
version = "0.3"
description = "A simulation library for image physics."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "matplotlib",
    "scikit-image"
]
license = {text = "MIT"}
authors = [
    {name = "Tobia Ippolito"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/xXAI-botXx/Image-Physics-Simulation"
"Documentation" = "https://xxai-botxx.github.io/Image-Physics-Simulation/img_phy_sim"